<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/desc"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:contentDescription="@string/desc"
    >
        <EditText
            android:id="@+id/name_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/name"
            android:inputType="textCapWords"
        />

        <TextView
            android:contentDescription="@string/toppings"
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"
            android:layout_margin="16dp"
        />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="0dp"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:text="@string/whipC"
        />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="0dp"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:text="@string/cocoa"
        />

        <TextView
            android:contentDescription="@string/quan"
            android:text="@string/quan"
            style="@style/HeaderTextStyle"
            android:layout_margin="16dp"
        />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:contentDescription="@string/picker">

            <Button
                android:id="@+id/minus_button"
                android:contentDescription="@string/minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textAllCaps="true"
                android:text="@string/minus"
                android:onClick="decrement"
            />

            <TextView
                android:id="@+id/quantity_text_view"
                android:contentDescription="@string/amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amt"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
            />

            <Button
                android:id="@+id/plus_button"
                android:contentDescription="@string/plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:textAllCaps="true"
                android:text="@string/plus"
                android:onClick="increment"
            />
        </LinearLayout>

        <!--TextView
            android:layout_width="wrap_content"
            android:contentDescription="@string/price"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAllCaps="true"
            android:layout_margin="16dp"
        />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:contentDescription="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceAmt"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
        /-->

        <Button
            android:id="@+id/order_button"
            android:contentDescription="@string/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textAllCaps="true"
            android:text="@string/order"
            android:onClick="submitOrder"
        />
    </LinearLayout>
</ScrollView>